@@ -346,7 +346,10 @@ diff -Nru openjdk-ecj.orig/corba/make/common/Rules.gmk openjdk-ecj/corba/make/co
 diff -Nru openjdk-ecj.orig/corba/make/common/shared/Defs-java.gmk openjdk-ecj/corba/make/common/shared/Defs-java.gmk
 --- openjdk-ecj.orig/corba/make/common/shared/Defs-java.gmk	2012-01-18 16:50:57.569109033 +0000
 +++ openjdk-ecj/corba/make/common/shared/Defs-java.gmk	2012-01-18 21:43:04.150185964 +0000
-@@ -120,32 +120,14 @@
+@@ -116,35 +116,17 @@
+ CLASS_VERSION = -target $(TARGET_CLASS_VERSION)
+ JAVACFLAGS  += $(CLASS_VERSION)
+ JAVACFLAGS  += -encoding ascii
 -JAVACFLAGS  += -classpath $(BOOTDIR)/lib/tools.jar
 +JAVACFLAGS  += -classpath $(LANGTOOLS_DIST)/lib/classes.jar
  JAVACFLAGS  += $(OTHER_JAVACFLAGS)
