@@ -1,3 +1,8 @@
+2012-08-17  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* patches/ecj/hotspot.patch:
+	Make this patch file compatible with patch tool 2.5.4
+
 2012-08-16  Andrew John Hughes  <ahughes@redhat.com>
 
 	PR1121: Old installs still suffer from GCC PR41686
